<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/cityFragment">

    <fragment
        android:id="@+id/cityFragment"
        android:name="com.kyrpapados.weatherapp.ui.main.city.CityFragment"
        android:label="@string/fragment_city"
        tools:layout="@layout/fragment_city" >
        <action
            android:id="@+id/action_cityFragment_to_forecastFragment"
            app:destination="@id/forecastFragment" />
        <action
            android:id="@+id/action_cityFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.kyrpapados.weatherapp.ui.main.forecast.ForecastFragment"
        android:label="@string/fragment_forecast"
        tools:layout="@layout/fragment_forecast" >
        <action
            android:id="@+id/action_forecastFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.kyrpapados.weatherapp.ui.main.details.DetailsFragment"
        android:label="@string/fragment_details"
        tools:layout="@layout/fragment_details" />
</navigation>