<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsSwipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryLight" >

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/graphDateChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedChip="@id/oneHourChip">

            <com.google.android.material.chip.Chip
                android:id="@+id/oneHourChip"
                style="@style/DateChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/half_margin"
                android:text="@string/details_fragment_one_hour_chip"
                app:closeIconVisible="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/threeHourChip"
                style="@style/DateChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_fragment_three_hour_chip"
                app:closeIconVisible="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/sixHourChip"
                style="@style/DateChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_fragment_six_hour_chip"
                app:closeIconVisible="false"/>

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginStart="@dimen/half_margin"
            android:layout_marginEnd="@dimen/half_margin"
            app:layout_constraintTop_toBottomOf="@+id/graphDateChipGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>